# python_project_setup

./: README.md  import_external_package.py  import_internal_package.py  pyproject.toml  setup.py  syspath_3.1.py
src/demo/: utils.py
